# autonomous-ai-template

./: .gitignore  README.md
files (5)/: Cargo.toml  README.md  SecOpsDashboard.jsx  agent.ts  memoryManager.ts  swarm_manager.rs  tsconfig.json
java/: pom.xml
java/src/: MemoryManager.java
java/src/main/java/: Agent.java  SwarmManager.java
python/: agent.py  agent_python.py  memory_manager.py  swarm_manager.py
rust/: Cargo.toml
rust/src/: agent.rs  memory_manager.rs
sec-ops-ui/: cybersec-dashboard.jsx
typescript/: package.json
typescript/src/: agent.ts  swarmManager.ts
