[package]
name        = "omnikon-swarm"
version     = "1.0.2"
edition     = "2021"
description = "OMNIKON SEC·OPS — AI Swarm Manager (Rust)"
authors     = ["OMNIKON"]
license     = "MIT"
rust-version = "1.75"

[[bin]]
name = "swarm"
path = "src/swarm_manager.rs"

[dependencies]
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1",   features = ["v4"] }
regex       = "1"
log         = "0.4"
env_logger  = "0.11"
ureq        = { version = "2",   features = ["json"] }
parking_lot = "0.12"
md5         = "0.7"
sha2        = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
